media/komga/0-pv.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: komga
