media/komga/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: komga
  name: komga
  namespace: komga
spec:
  ports:
    - name: komga
      port: 25600
      targetPort: 25600
      protocol: TCP
  selector:
    app: komga
  type: LoadBalancer
