media/komga/4-ingress.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: komga-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.201
    ports:
      - port: 25600
---
apiVersion: v1
kind: Service
metadata:
  name: komga-external
  namespace: default
spec:
  clusterIP: None
  ports:
    - port: 25600
      targetPort: 25600
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: komga-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - komga.vladas.xyz
      secretName: vladas.xyz-tls
  rules:
    - host: komga.vladas.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: komga-external
                port:
                  number: 25600
